# deep-representation-learning-book

./: .gitignore  .latexmkrc  .rgignore  EngC.cls  README.md  book-main.tex  book-main_es.tex  book-main_zh.tex  book-references.bib  bookv2_sync_aliases.sh  math-macros.sty  math-theorems_zh.sty  pyproject.toml  record.txt  texmf.cnf
.github/workflows/: deploy-pages.yml
chapters/: notation.tex  notation_es.tex  notation_zh.tex
chapters/acknowledgment/: acknowledgment.tex  acknowledgment_es.tex  acknowledgment_zh.tex
chapters/appendixA/: optimization.tex  optimization_zh.tex
chapters/appendixB/: entropy.tex  entropy_zh.tex
chapters/chapter1/: introduction.tex  introduction_es.tex  introduction_zh.tex
chapters/chapter2/: classic-models.tex  classic-models_es.tex  classic-models_zh.tex
chapters/chapter3/: compression-principle_zh.tex  denoising.tex  denoising_es.tex  denoising_zh.tex
chapters/chapter4/: lossy-compression.tex  lossy-compression_es.tex  lossy-compression_zh.tex
chapters/chapter5/: deep-networks.tex  deep-networks_es.tex  deep-networks_ro.tex  deep-networks_zh.tex
chapters/chapter6/: consistent-representations.tex  consistent-representations_es.tex  consistent-representations_zh.tex  consistent_ro.tex
chapters/chapter7/: conditional-inference.tex  conditional_ro.tex  (+2 more)
prompts/: ch8_cleanup.md  ch8_notation.md  ch8_structural.md  instructions.md  math_macros.md  proofread.py  sync.md  translate.md  translate.py
proofreading/: math_delimiters.md  math_style.md  punctuation.md  references.md  text_editing.md  trim_figure_whitespace.py
(+59 files in other folders)
